--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,7 @@ button {
 
   .mobile-menu-item {
     font-weight: 700;
-    font-size: 36px;
+    font-size: 23px;
     line-height: 1.11;
     letter-spacing: 0.02em;
     color: #2e2f42;
@@ -300,8 +300,9 @@ button {
 
   .menu-link {
     display: block;
+    font-weight: 500;
     padding-top: 24px;
-    padding-bottom: 22px;
+    padding-bottom: 23px;
     transition: color var(--transition);
   }
 
@@ -531,6 +532,31 @@ button {
   margin: -1px;
 }
 
+.bnfts-box {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+.bnf-div {
+
+display: none;
+  
+ }
+
+ .bnf-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+ 
+.bnf-icon-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  gap: 72px;
+}
+
 
 
 @media screen and (max-width: 1199px) {
@@ -557,23 +583,24 @@ button {
 
 @media screen and (min-width: 768px) {
 
-
+.bnf-div {
+  display: none;
+}
   
   .bnf-icon-list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 72px 24px;
-  }
+    row-gap: 72px;
+        column-gap: 24px;
+        flex-direction: row;
+        flex-wrap: wrap;
+      
+    }
 
-  .third-header {
-    text-align: left;
-  }
 
-  .bnft-item-text {
-    width: calc((100% - 24px) / 2);
-  }
+.bnf-item {
+  width: 326px;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
 }
 
 /*Benefits Desktop*/
@@ -614,7 +641,7 @@ button {
   }
 
   .bnf-div {
-
+    width: 264px;
     height: 112px;
     background-color: #F4F4FD;
     border-radius: 4px;
@@ -624,6 +651,12 @@ button {
     margin-bottom: 8px;
     
    }
+
+   .bnf-item {
+    width: 264px;
+  }
+   
+
 
 /*Benefits Mobile/Tablet*/
 @media screen and (max-width: 1199px) {
@@ -785,7 +818,7 @@ button {
   .customers-item-link {
     width: 168px;
     height: 88px;
-    padding: 16px 32px;
+    
   }
 }
 
