--- a/css/styles.css
+++ b/css/styles.css
@@ -1148,6 +1148,31 @@ button {
   transition: transform var(--transition);
 }
 
+@media screen and (min-width: 300px) {
+  .modal {
+    padding: 72px 16px 24px 16px;
+    min-width: 298px;
+    /* height: 586px; */
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    padding: 72px 24px 24px 24px;
+    min-width: 298px;
+    width: 408px;
+    height: 586px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    padding: 72px 24px 24px 24px;
+    width: 408px;
+    height: 584px;
+  }
+}
+
 .modal-close-button {
   position: absolute;
   top: 24px;
@@ -1171,33 +1196,10 @@ button {
   fill: #fff;
 }
 
-@media screen and (max-width: 767px) {
-  .modal {
-    padding: 72px 16px 24px 16px;
-    width: 392px;
-    height: 586px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .modal {
-    padding: 72px 24px 24px 24px;
-    width: 408px;
-    height: 586px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .modal {
-    padding: 72px 24px 24px 24px;
-    width: 408px;
-    height: 584px;
-  }
-}
-
 /*Modal form*/
 
 .callback {
+  text-align: center;
   display: flex;
   justify-content: center;
   font-style: normal;
