--- a/css/styles.css
+++ b/css/styles.css
@@ -219,10 +219,16 @@ button {
 
   .contacts-mobmenu-tel {
     font-weight: 600;
-    font-size: 34px;
+    font-size: 23px;
     line-height: 1.11;
     letter-spacing: 0.01em;
     color: var(--primary-brand-color);
+  }
+
+  @media screen and (min-width: 480px) {
+    .contacts-mobmenu-tel {
+      font-size: 34px;
+    }
   }
 
   .contacts-mobmenu-email {
@@ -542,13 +548,21 @@ button {
   .bnf-item:not(:last-child) {
     margin-bottom: 72px;
   }
+ 
 }
+
+.bnf-item {
+  width: 326px;
+  
+}
+
 .bnf-icon-list {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 72px;
 }
+
 
 @media screen and (max-width: 1199px) {
   .bnfts-box {
@@ -759,19 +773,23 @@ button {
   justify-content: center;
   row-gap: 72px;
   column-gap: 16px;
-  justify-content: center;
+}
+
+.customers-list-item {
+  flex-basis: calc((100% - 16px) / 2);
 }
 
 .customers-item-link {
-  width: 190px;
-  height: 88px;
-  padding: 16px 40px;
-  fill: #afb1b8;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 88px;
+  /* padding: 16px 40px; */
+  fill: #afb1b8;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+
   transition: fill var(--transition), border var(--transition);
 }
 
@@ -782,20 +800,27 @@ button {
   border-radius: 4px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .customers-list {
-    column-gap: 24px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .customers-list {
     column-gap: 24px;
+  }
+  .customers-list-item {
+    flex-basis: calc((100% - 234px) / 3);
   }
 
   .customers-item-link {
     width: 168px;
     height: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customers-list {
+    gap: 24px;
+  }
+
+  .customers-list-item {
+    flex-basis: calc((100% - 120px) / 6);
   }
 }
 
