--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,6 @@ button {
 }
 
 .secondary-header {
-  font-weight: 600;
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
@@ -165,16 +164,17 @@ button {
     background-color: #fff;
     z-index: 100;
     padding: 80px 51px 40px 40px;
-    opacity: 0;
-    visibility: hidden;
+    
     pointer-events: none;
-    transition: opacity var(--transition), visibility var(--transition);
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
   }
 
   .mobile-menu.is-open {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
+    transform: translateX(0);
   }
 
   .mobile-menu-close-btn {
@@ -395,7 +395,10 @@ button {
 }
 
 .main-header {
-  font-weight: 700;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  max-width: 318px;
   font-size: 36px;
   line-height: 1.11;
   color: #ffffff;
@@ -463,6 +466,7 @@ button {
     margin-bottom: 40px;
     font-size: 56px;
     line-height: 1.07;
+    max-width: 494px;
   }
 }
 
@@ -499,7 +503,6 @@ button {
   }
 
   .main-header {
-    font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     margin-bottom: 40px;
@@ -599,7 +602,6 @@ button {
 }
 
 .third-header {
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.1;
   letter-spacing: 0.02em;
@@ -1168,6 +1170,8 @@ button {
 }
 
 .modal {
+  padding: 72px 16px 24px 16px;
+  min-width: 298px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1179,18 +1183,8 @@ button {
   transition: transform var(--transition);
 }
 
-@media screen and (min-width: 300px) {
-  .modal {
-    padding: 72px 16px 24px 16px;
-    min-width: 298px;
-    /* height: 586px; */
-  }
-}
-
 @media screen and (min-width: 768px) {
   .modal {
-    padding: 72px 24px 24px 24px;
-    min-width: 298px;
     width: 408px;
     height: 586px;
   }
@@ -1198,8 +1192,6 @@ button {
 
 @media screen and (min-width: 1200px) {
   .modal {
-    padding: 72px 24px 24px 24px;
-    width: 408px;
     height: 584px;
   }
 }
